Archive2/92/61f68b9de7855d/output
main.cpp: In function 'constexpr bool isPrime(int)':
main.cpp:10:1: error: body of constexpr function 'constexpr bool isPrime(int)' not a return-statement
 }
 ^
